welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:42: error: value Yellow is not a member of object java.awt.Color
fF(Color.Yellow);
         ^FlowerPot:50: error: value Yellow is not a member of object java.awt.Color
fF(Color.Yellow);
         ^